--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,47 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Adinda de Wit at 2017-01-09 18:14:35 +0000 
+%% Created for Adinda de Wit at 2017-01-11 20:25:43 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{YR4,
+	Collaboration = {The LHC Higgs Cross Section Working Group},
+	Date-Added = {2017-01-11 17:48:46 +0000},
+	Date-Modified = {2017-01-11 17:49:31 +0000},
+	Eprint = {1610.07922},
+	Keywords = {13TeV},
+	Title = {Handbook of LHC Higgs Cross Sections: 4. Deciphering the Nature of the Higgs Sector},
+	Year = {2016}}
+
+@article{alphas-uncs,
+	Author = {A.D. Martin and W.J. Stirling and R.S. Thorne and G. Watt},
+	Date-Added = {2017-01-11 17:47:36 +0000},
+	Date-Modified = {2017-01-11 17:48:45 +0000},
+	Doi = {10.1140/epjc/s10052-009-1164-2},
+	Eprint = {0905.3531},
+	Journal = {Eur. Phys. J. C},
+	Keywords = {13TeV},
+	Pages = {653-680},
+	Title = {Uncertainties on alpha(S) in global PDF analyses and implications for predicted hadronic cross sections},
+	Volume = {64},
+	Year = {2009}}
+
+@article{pdf-lhc,
+	Author = {A.D. Martin and W.J. Stirling and G. Watt},
+	Date-Added = {2017-01-11 17:46:47 +0000},
+	Date-Modified = {2017-01-11 17:47:34 +0000},
+	Doi = {10.1140/epjc/s10052-009-1072-5},
+	Eprint = {0901.0002},
+	Journal = {Eur. Phys. J. C},
+	Keywords = {13TeV},
+	Pages = {1890285},
+	Title = {Parton distributions for the LHC},
+	Volume = {63},
+	Year = {2009}}
 
 @article{CMS-PAS-HIG-16-007,
 	Collaboration = {CMS},
